# Legacy

DirectXGameEngine/.svn/: wc.db
DirectXGameEngine/Box2D/: Box2D.vcxproj
DirectXGameEngine/aiBreach/: aiBreach.sln
DirectXGameEngine/clientTestAp/: clientTestAp.sln
DirectXGameEngine/fight/: fight.vcproj  fight.vcxproj  fight.vcxproj.filters
DirectXGameEngine/gameTemplate3D/: gameTemplate.vcproj
DirectXGameEngine/lost/: lost.vcxproj.filters
DirectXGameEngine/obsolete/: actor.cpp  collisionbody.h  collisioncheck2d.cpp  collisionmanifold.cpp  collisionmanifold.h  collisionmesh2d.cpp  collisionresfunc2d.cpp  collisionstats.cpp  collisionvertex.h  edge.cpp  ipicture.cpp  objectshaderdata2d.h  shadowjointanimationmesh.h  shadowmesh.h  (+7 more)
SoftwareRenderingEngine/gameTemplate/source/: CMakeLists.txt
SoftwareRenderingEngine/gameTemplate/source/game/: game.cpp  game.h  main.cpp
SoftwareRenderingEngine/gameTemplate/source/render/: classtemplate.cpp  classtemplate.h
SoftwareRenderingEngine/gameTemplate/source/smartGUI/: smartapplysettingsbtn.cpp  smartapplysettingsbtn.h  smartconfirmbtn.cpp  smartdeadzoneslider.cpp  smartdeadzoneslider.h  smartfullscreencheckbox.cpp  smartfullscreencheckbox.h  smartresolutionbtn.cpp  smartresolutionbtn.h  smartsettingsmenubtn.cpp  smartsettingsmenubtn.h  smartvsynccheckbox.cpp  smartvsynccheckbox.h
SoftwareRenderingEngine/gameTemplate/source/state/: commonstate.cpp  igamestate.h  loadscreenanimationinfo.h  loadstate.cpp  loadstate.h  runstate.cpp  runstate.h  startupstate.cpp  startupstate.h  titlescreenstate.cpp  titlescreenstate.h
(+3334 files in other folders)
